[package]
name = "iced_modern_theme"
version = "0.1.7"
edition = "2021"
description = "Modern theme for iced-rs"
license = "MIT"
repository = "https://github.com/KainTwinam/iced-modern-theme"
readme = "README.md"
keywords = ["iced", "gui", "modern", "theme", "palette"]
categories = ["gui"]

[dependencies]
iced = "0.14.0"
palette = "0.7.6" 


[[example]]
name = "showcase"
path = "examples\\showcase.rs"
